--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="card-white" id="introduction">
 				<h1>Welcome to my webpage</h1>
 
-				<img src="images/photo-jeremie.png" alt="Jeremie picture" id="img-profile" class="img-circle img-shadowed">
+				<img src="images/photo-jeremie.PNG" alt="Jeremie picture" id="img-profile" class="img-circle img-shadowed">
 
 				<p>
 					I'm 19 years old, I love sport, travels, and music ! 
